feat(print-dialog): update component style

--- a/src/app/shared/components/dialog/dialog.component.html
+++ b/src/app/shared/components/dialog/dialog.component.html
@@ -6,7 +6,7 @@
         <mat-icon>{{size === 'compact' ? 'open_in_full' : 'close_fullscreen'}}</mat-icon>
       </app-button>
       <app-button button-transparent (click)="onClose()">
-        <mat-icon>close</mat-icon>
+        <mat-icon svgIcon="close-new"></mat-icon>
       </app-button>
     </div>
   </header>
