feat(category-details): update icon

--- a/src/app/category-details/category-details.component.html
+++ b/src/app/category-details/category-details.component.html
@@ -9,7 +9,7 @@
     <div class="category-details__info-section">
       <div class="category-details__column">
         <app-rich-widget *ngIf="categoryDetails.type === CategoryTypeEnum.Car"
-                          icon="speed"
+                          icon="speed-new"
                           type="mileage"
                           tooltip="PAGES.CATEGORY_DETAILS.TOOLTIPS.MILEAGE"
                           [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.MILEAGE'"
