feat(detail): update icon

--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -7,7 +7,7 @@
 
   <ng-container buttons-right>
     <app-button button-transparent (click)="onCreateRecord()">
-      <mat-icon>add</mat-icon>
+      <mat-icon svgIcon="add-new"></mat-icon>
     </app-button>
 
     <app-button *ngIf="dataSourceTable.length" button-transparent (click)="onPrint()">
