--- a/src/app/shared/components/create-car-dialog/create-car-dialog.component.html
+++ b/src/app/shared/components/create-car-dialog/create-car-dialog.component.html
@@ -1,72 +1,67 @@
 <div class="create-car-dialog">
   <app-dialog [title]="title | async"
-              [canChangeSize]="true"
+              [mode]="data.mode"
               (close)="onClose()"
               (submit)="onSubmit()"
   >
     <form content [formGroup]="carForm" class="create-car-dialog__content">
-      <div class="create-car-dialog__columns">
-        <div>
-          <ubuntu-container [title]="'DIALOG.COMMON' | translate" [hasBordersStyle]="false" [flat]="true">
-            <div class="create-car-dialog__container">
-              <mat-form-field [floatLabel]="'always'">
-                <mat-label>{{"DIALOG.FIELDS.NAME" | translate}}</mat-label>
-                <input cdkFocusInitial [required]="true" [formControlName]="'name'" matInput>
-                <mat-error>
-                  {{"DIALOG.VALIDATIONS.NAME" | translate}}
-                </mat-error>
-              </mat-form-field>
-            </div>
-          </ubuntu-container>
-          <ubuntu-container [title]="'DIALOG.INFO' | translate" [hasBordersStyle]="false" [flat]="true">
-            <div class="create-car-dialog__container">
-              <mat-form-field [floatLabel]="'always'">
-                <mat-label>{{"DIALOG.FIELDS.VEHICLE_ID" | translate}}</mat-label>
-                <input [formControlName]="'vehicleId'" matInput>
-              </mat-form-field>
-              <mat-form-field [floatLabel]="'always'">
-                <mat-label>{{"DIALOG.FIELDS.MAKE" | translate}}</mat-label>
-                <input [formControlName]="'make'" matInput>
-              </mat-form-field>
-              <mat-form-field [floatLabel]="'always'">
-                <mat-label>{{"DIALOG.FIELDS.MODEL" | translate}}</mat-label>
-                <input [formControlName]="'model'" matInput>
-              </mat-form-field>
-              <mat-form-field [floatLabel]="'always'">
-                <mat-label>{{"DIALOG.FIELDS.YEAR" | translate}}</mat-label>
-                <input [formControlName]="'year'" matInput>
-                <mat-error *ngIf="carForm.get('year').hasError('number')">
-                  {{carForm.get('year').getError('number').value | translate}}
-                </mat-error>
-                <mat-error *ngIf="carForm.get('year').hasError('positiveNumber')">
-                  {{carForm.get('year').getError('positiveNumber').value | translate}}
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field [floatLabel]="'always'">
-                <mat-label>{{"DIALOG.FIELDS.ENGINE" | translate}}</mat-label>
-                <input [formControlName]="'engine'" matInput>
-              </mat-form-field>
-              <mat-form-field [floatLabel]="'always'">
-                <mat-label>{{"DIALOG.FIELDS.MILEAGE" | translate}}</mat-label>
-                <input [formControlName]="'mileage'" matInput>
-                <mat-error *ngIf="carForm.get('mileage').hasError('number')">
-                  {{carForm.get('mileage').getError('number').value | translate}}
-                </mat-error>
-                <mat-error *ngIf="carForm.get('mileage').hasError('positiveNumber')">
-                  {{carForm.get('mileage').getError('positiveNumber').value | translate}}
-                </mat-error>
-              </mat-form-field></div>
-          </ubuntu-container>
+      <app-tabs [tabs]="['DIALOG.COMMON', 'DIALOG.PARTS']" tabWidth="140" bordered="true" [badgesVisibilityArray]="[carForm.get('name').valid, carForm.get('parts').valid]">
+        <div tab-1>
+          <div class="create-car-dialog__container">
+            <mat-form-field [floatLabel]="'always'">
+              <mat-label>{{"DIALOG.FIELDS.NAME" | translate}}</mat-label>
+              <input cdkFocusInitial [required]="true" [formControlName]="'name'" matInput>
+              <mat-error>
+                {{"DIALOG.VALIDATIONS.NAME" | translate}}
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field [floatLabel]="'always'">
+              <mat-label>{{"DIALOG.FIELDS.VEHICLE_ID" | translate}}</mat-label>
+              <input [formControlName]="'vehicleId'" matInput>
+            </mat-form-field>
+            <mat-form-field [floatLabel]="'always'">
+              <mat-label>{{"DIALOG.FIELDS.MAKE" | translate}}</mat-label>
+              <input [formControlName]="'make'" matInput>
+            </mat-form-field>
+            <mat-form-field [floatLabel]="'always'">
+              <mat-label>{{"DIALOG.FIELDS.MODEL" | translate}}</mat-label>
+              <input [formControlName]="'model'" matInput>
+            </mat-form-field>
+            <mat-form-field [floatLabel]="'always'">
+              <mat-label>{{"DIALOG.FIELDS.YEAR" | translate}}</mat-label>
+              <input [formControlName]="'year'" matInput>
+              <mat-error *ngIf="carForm.get('year').hasError('number')">
+                {{carForm.get('year').getError('number').value | translate}}
+              </mat-error>
+              <mat-error *ngIf="carForm.get('year').hasError('positiveNumber')">
+                {{carForm.get('year').getError('positiveNumber').value | translate}}
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field [floatLabel]="'always'">
+              <mat-label>{{"DIALOG.FIELDS.ENGINE" | translate}}</mat-label>
+              <input [formControlName]="'engine'" matInput>
+            </mat-form-field>
+            <mat-form-field [floatLabel]="'always'">
+              <mat-label>{{"DIALOG.FIELDS.MILEAGE" | translate}}</mat-label>
+              <input [formControlName]="'mileage'" matInput>
+              <mat-error *ngIf="carForm.get('mileage').hasError('number')">
+                {{carForm.get('mileage').getError('number').value | translate}}
+              </mat-error>
+              <mat-error *ngIf="carForm.get('mileage').hasError('positiveNumber')">
+                {{carForm.get('mileage').getError('positiveNumber').value | translate}}
+              </mat-error>
+            </mat-form-field>
+          </div>
         </div>
-        <div>
-          <ubuntu-container [title]="'DIALOG.PARTS' | translate" [info]="'DIALOG.TOOLTIPS.CAR_PARTS' | translate" [hasBordersStyle]="false" [flat]="true">
+        <div class="create-car-dialog__parts-container" tab-2>
+          <ubuntu-container [title]="'DIALOG.PARTS' | translate" [info]="'DIALOG.TOOLTIPS.CAR_PARTS' | translate" [hasBordersStyle]="false">
             <app-button actions button-transparent (click)="addPart()">
-              <mat-icon>add</mat-icon>
+              <mat-icon svgIcon="add-new"></mat-icon>
             </app-button>
-            <div class="create-car-dialog__parts-container">
+            <div>
               <div formArrayName="parts">
+                <div class="create-car-dialog__parts-inputs-container">
                 <div class="create-car-dialog__part" *ngFor="let partConrol of parts.controls; let i = index">
-                  <span>{{i + 1}}.</span>
                   <mat-form-field>
                     <input [formControlName]="i" matInput>
                     <mat-error>
@@ -78,10 +73,11 @@
                   </app-button>
                 </div>
               </div>
+              </div>
             </div>
           </ubuntu-container>
         </div>
-      </div>
+      </app-tabs>
     </form>
   </app-dialog>
 </div>
