refactor(app): styles

--- a/src/app/shared/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="delete-dialog">
   <div class="delete-dialog__close-button-container">
     <app-button button-transparent (click)="dialogRef.close()">
-      <mat-icon>close</mat-icon>
+      <mat-icon svgIcon="close-new"></mat-icon>
     </app-button>
   </div>
   <header class="delete-dialog__header">
