feat(welcome-page): update styles

--- a/src/app/database-select/database-select.component.html
+++ b/src/app/database-select/database-select.component.html
@@ -1,8 +1,5 @@
 <div class="database-select">
-  <div class="database-select__text">
-    {{"PAGES.DATABASE_SELECT.TEXT" | translate}}
-  </div>
-  <div>
+  <div class="database-select__buttons">
     <button mat-button class="button button__create" (click)="onCreate()">{{"PAGES.DATABASE_SELECT.CREATE" | translate}}</button>
     <button class="button" mat-button (click)="onOpen()">{{"PAGES.DATABASE_SELECT.OPEN" | translate}}</button>
   </div>
