--- a/src/app/welcome-page/welcome-page.component.scss
+++ b/src/app/welcome-page/welcome-page.component.scss
@@ -1,87 +1,125 @@
 @import '/src/colors';
 @import '/src/fonts';
 
+@keyframes slide {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(10px, 10px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
 .welcome-page {
   height: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  
+
   font-family: $font-system;
   user-select: none;
+
+  &__form-container {
+    position: relative;
+    width: 60%;
+    padding: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  &__illustration-container {
+    width: 40%;
+    background: $color-secondary;
+  }
+
+  &__illustration {
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    padding: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-size: 192px;
+    background-image: url('/assets/illustration.png');
+
+    animation: slide 15s linear infinite;
+  }
 
   &__content {
     height: 380px;
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    z-index: 1;
-  }
-
-  &__stretcher {
-    flex-grow: 1;
   }
 
   &__title {
-    font-size: 64px;
-    margin-bottom: 16px;
+    margin-bottom: 8px;
+
+    font-size: 48px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1;
     color: $font-primary;
   }
 
   &__sub-title {
     display: flex;
     align-items: center;
-    font-size: 24px;
+    margin-bottom: 64px;
+
     color: #333;
-    font-family: system-ui;
+    font-size: 18px;
+    font-family: $font-primary;
+    text-align: center;
   }
 
   &__buttons {
     display: flex;
-    flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
-  }
+    gap: 2px;
 
-  &__get-started-button {
-    margin-bottom: 16px;
-    padding: 4px 64px;
-    font-family: $font-system;
-    font-weight: normal;
-    background-color: #0d7f1e;
-    border-color: rgba(0,0,0,0.56);
-    color: #fff;
-    font-size: 18px;
-  }
-
-  &__skip-link {
-    font-family: $font-system;
-    font-weight: 100;
-    color: #0066CC;
-  }
-
-  &__gear {
     position: absolute;
-    color: #e5e5e5;
-    width: 512px;
-    height: 512px;
-    font-size: 512px;
+    right: 40%;
+    bottom: 12px;
+  }
 
-    &--top {
-      top: -256px;
-      left: -256px;
-    }
+  &__question-text {
+    margin-right: 12px;
 
-    &--bottom {
-      bottom: -256px;
-      right: -256px;
-    }
+    font-family: $font-system;
+    font-size: 14px;
+    color: #222;
   }
 
   &__app-icon {
     width: 96px;
     width: 96px;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
+  }
+}
+
+@media (max-width: 678px) {
+  .welcome-page {
+    &__form-container {
+      width: 100%;
+    }
+
+    &__illustration-container {
+      display: none;
+    }
+
+    &__title {
+      font-size: 36px;
+    }
+
+    &__buttons {
+      right: 12px;
+    }
   }
 }
