feat(app): update category-details [1]

--- a/src/app/dashboard/dashboard-item/dashboard-item.component.html
+++ b/src/app/dashboard/dashboard-item/dashboard-item.component.html
@@ -3,7 +3,7 @@
   'dashboard-item--s': size === 's'
 }">
   <mat-icon *ngIf="external"
-            class="dashboard-item__external" svgIcon="external-new">
+            class="dashboard-item__external" svgIcon="external">
   </mat-icon>
 
   <ng-container [ngSwitch]="type">
