--- a/src/app/shared/components/account-dialog/account-dialog.component.html
+++ b/src/app/shared/components/account-dialog/account-dialog.component.html
@@ -5,7 +5,7 @@
   >
   <section class="account-dialog__account-container" content>
     <div class="account-dialog__account-icon-container">
-      <mat-icon svgIcon="user-new" class="account-dialog__account-icon"></mat-icon>
+      <mat-icon svgIcon="user" class="account-dialog__account-icon"></mat-icon>
     </div>
     <div class="account-dialog__data">
       <mat-form-field [floatLabel]="'always'">
