--- a/src/app/shared/components/create-car-dialog/create-car-dialog.component.html
+++ b/src/app/shared/components/create-car-dialog/create-car-dialog.component.html
@@ -56,7 +56,7 @@
         <div class="create-car-dialog__parts-container" tab-2>
           <ubuntu-container [title]="'DIALOG.PARTS' | translate" [info]="'DIALOG.TOOLTIPS.CAR_PARTS' | translate" [hasBordersStyle]="false">
             <app-button actions button-transparent (click)="addPart()">
-              <mat-icon svgIcon="add-new"></mat-icon>
+              <mat-icon svgIcon="add"></mat-icon>
             </app-button>
             <div>
               <div formArrayName="parts">
