--- a/src/app/shared/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.html
@@ -1,11 +1,11 @@
 <div class="delete-dialog">
   <div class="delete-dialog__close-button-container">
     <app-button button-transparent (click)="dialogRef.close()">
-      <mat-icon svgIcon="close-new"></mat-icon>
+      <mat-icon svgIcon="close"></mat-icon>
     </app-button>
   </div>
   <header class="delete-dialog__header">
-    <mat-icon class="delete-dialog__icon" svgIcon="trash-new"></mat-icon>
+    <mat-icon class="delete-dialog__icon" svgIcon="trash"></mat-icon>
   </header>
 
   <main class="delete-dialog__content">
