--- a/src/app/shared/components/print-dialog/print-dialog.component.html
+++ b/src/app/shared/components/print-dialog/print-dialog.component.html
@@ -10,7 +10,7 @@
             {{saveDirectoryPath}}
           </span>
           <app-button button-transparent (click)="onEditFilePath()">
-            <mat-icon svgIcon="edit-new"></mat-icon>
+            <mat-icon svgIcon="edit"></mat-icon>
           </app-button>
         </div>
       </content-container>
