--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -15,14 +15,14 @@
   </div>
   <div class="welcome-page__buttons">
     <span class="welcome-page__question-text">{{'PAGES.WELCOME.NEED_HELP' | translate}}</span>
-    <app-button button-transparent matTooltip="{{'PAGES.WELCOME.GITHUB' | translate}}" (click)="onOpenGitHub()">
-      <mat-icon svgIcon="github-new"></mat-icon>
+    <app-button button-transparent matTooltip="{{'PAGES.WELCOME.QUESTION' | translate}}" (click)="onOpenFeedback()">
+      <mat-icon svgIcon="question"></mat-icon>
     </app-button>
     <app-button button-transparent matTooltip="{{'PAGES.WELCOME.MAIL' | translate}}" (click)="onOpenMail()">
-      <mat-icon svgIcon="mail-new"></mat-icon>
+      <mat-icon svgIcon="mail"></mat-icon>
     </app-button>
-    <app-button button-transparent matTooltip="{{'PAGES.WELCOME.QUESTION' | translate}}" (click)="onOpenFeedback()">
-      <mat-icon svgIcon="question-new"></mat-icon>
+    <app-button button-transparent matTooltip="{{'PAGES.WELCOME.GITHUB' | translate}}" (click)="onOpenGitHub()">
+      <mat-icon svgIcon="github"></mat-icon>
     </app-button>
   </div>
 </div>
