--- a/src/app/category-details/category-details.component.html
+++ b/src/app/category-details/category-details.component.html
@@ -1,7 +1,7 @@
 <app-details [title]="categoryDetails.data.name" class="category-details">
   <ng-container buttons-right>
     <app-button button-transparent (click)="onPrint()">
-      <mat-icon svgIcon="printer-new"></mat-icon>
+      <mat-icon svgIcon="printer"></mat-icon>
     </app-button>
   </ng-container>
 
@@ -9,7 +9,7 @@
     <div class="category-details__info-section">
       <div class="category-details__column">
         <app-rich-widget *ngIf="categoryDetails.type === CategoryTypeEnum.Car"
-                          icon="speed-new"
+                          icon="speed"
                           type="mileage"
                           tooltip="PAGES.CATEGORY_DETAILS.TOOLTIPS.MILEAGE"
                           [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.MILEAGE'"
@@ -17,7 +17,7 @@
         >
         </app-rich-widget>
 
-        <app-rich-widget icon="money-new"
+        <app-rich-widget icon="money"
                 type="currency"
                 tooltip="PAGES.CATEGORY_DETAILS.TOOLTIPS.OVERALL_EXPENSE"
                 [title]="'PAGES.DETAIL.OVERALL_EXPENSE'"
@@ -25,7 +25,7 @@
         >
         </app-rich-widget>
       </div>
-      <app-widget [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.INFO' | translate" icon="task-new" *ngIf="categoryDetails.type === CategoryTypeEnum.Car">
+      <app-widget [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.INFO' | translate" icon="task" *ngIf="categoryDetails.type === CategoryTypeEnum.Car">
         <section class="car-info__content">
           <div class="car-info__raw">
             <span class="car-info__raw-label">{{"PAGES.CATEGORY_DETAILS.LABELS.VEHICLE_ID" | translate}}</span>
@@ -53,27 +53,88 @@
           </div>
         </section>
       </app-widget>
-      <app-widget [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.NOTE' | translate" icon="edit-new" *ngIf="categoryDetails.type === CategoryTypeEnum.Car">
+      <app-widget [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.NOTE' | translate" icon="edit" *ngIf="categoryDetails.type === CategoryTypeEnum.Car">
         <textarea #notesInput class="category-details__notes" [value]="categoryDetails.maintenance.note" placeholder="Type some notes" (focusout)="onTextAreaFocusOut(notesInput.value)"></textarea>
       </app-widget>
     </div>
 
     <section class="category-details__tables">
-      <ubuntu-container [title]="table.name" *ngFor="let table of categoryDetails.tables">
-        <app-button actions
-                    *ngIf="categoryDetails.type == CategoryTypeEnum.Car"
-                    [matMenuTriggerFor]="contextMenu"
-                    [matMenuTriggerData]="{name: table.name}"
-                    button-transparent>
-          <mat-icon>travel_explore</mat-icon>
-        </app-button>
-        <app-records-table class="category-details__table"
-                           *ngIf="table.data.length"
-                           [data]="table.data"
-                           (edit)="onEdit($event)"
-                           (delete)="onDelete($event)"
-        ></app-records-table>
-      </ubuntu-container>
+      <section class="category-details__table-container" [class.category-details__table-container--expand]="expandRecordsPanel">
+        <div class="category-details__table-header">
+          <span class="category-details__table-title">Записи <sup>(0)</sup></span>
+          <div class="category-details__panel">
+            <div class="category-details__tables-title-buttons">
+              <app-button button-transparent (click)="expandRecordsPanel = !expandRecordsPanel">
+                <mat-icon class="category-details__expand-button" [class.category-details__expand-button--expand]="expandRecordsPanel" svgIcon="expand"></mat-icon>
+              </app-button>
+            </div>
+          </div>
+
+        </div>
+        <div class="category-details__table-content" #detal [style.height]="expandRecordsPanel ? getContentHeight(detal) : 0" [class.category-details__table-content--show]="expandRecordsPanel">
+          <app-records-table class="category-details__table"
+                            [data]="[]"
+                            (edit)="onEdit($event)"
+                            (delete)="onDelete($event)"
+          ></app-records-table>
+        </div>
+
+      </section>
+    </section>
+
+    <section class="category-details__tables">
+      <div class="category-details__tables-title">
+        <span>Группы</span>
+        <div class="category-details__tables-title-buttons">
+          <app-button button-transparent (click)="onAddRecord()">
+            <mat-icon svgIcon="add"></mat-icon>
+          </app-button>
+          <app-button button-transparent (click)="toogleExpandStates(false)">
+            <mat-icon>unfold_less</mat-icon>
+          </app-button>
+          <app-button button-transparent (click)="toogleExpandStates(true)">
+            <mat-icon>unfold_more</mat-icon>
+          </app-button>
+        </div>
+      </div>
+      <section class="category-details__table-container"
+               [class.category-details__table-container--border-bottom]="table.length !== 1 && ((!first && expandPanelToggles[i + 1]) || (first && expandPanelToggles[i + 1]))"
+               [class.category-details__table-container--border-top]="table.length !== 1 && ((!last && expandPanelToggles[i - 1]) || (last && expandPanelToggles[i - 1]))"
+               [class.category-details__table-container--expand]="expandPanelToggles[i]"
+               *ngFor="let table of categoryDetails.tables; let i = index; let last = last; let first = first"
+      >
+        <div class="category-details__table-header">
+          <span class="category-details__table-title">{{table.name}} <sup>({{table.data.length}})</sup></span>
+          <div class="category-details__panel">
+            <div class="category-details__tables-title-buttons">
+              <app-button button-transparent (click)="expandPanelToggles[i] = !expandPanelToggles[i]">
+                <mat-icon class="category-details__expand-button" [class.category-details__expand-button--expand]="expandPanelToggles[i]" svgIcon="expand"></mat-icon>
+              </app-button>
+            </div>
+          </div>
+
+        </div>
+        <div class="category-details__table-content" #detal [style.height]="expandPanelToggles[i] ? getContentHeight(detal) : 0" [class.category-details__table-content--show]="expandPanelToggles[i]">
+          <div class="category-details__table-content-panel">
+            <div class="category-details__total">
+              <span class="category-details__total-text">{{'PAGES.DETAIL.OVERALL_EXPENSE' | translate}}</span>
+              <div class="category-details__total-value">
+                <span>{{12332321 | numberSeparator:settingsService.settings.region}}</span>
+                <app-currency [size]="0" [currency]="settingsService.settings.units?.currency"
+                              [locale]="settingsService.settings.region">
+                </app-currency>
+              </div>
+
+            </div>
+          </div>
+          <app-records-table class="category-details__table"
+                            [data]="table.data"
+                            (edit)="onEdit($event)"
+                            (delete)="onDelete($event)"
+          ></app-records-table>
+        </div>
+
+      </section>
     </section>
   </ng-container>
 
