--- a/src/app/category-details/category-details.component.scss
+++ b/src/app/category-details/category-details.component.scss
@@ -4,6 +4,19 @@
 
 .category-details {
 
+  &__expand-button {
+    transition: transform 0.2s linear;
+    transform: rotate(0deg);
+
+    &--expand {
+      transform: rotateX(180deg);
+    }
+  }
+
+  &__collapse-button {
+    transform: rotate(180deg);
+  }
+
   &__notes {
     padding: 8px;
     height: 98px;
@@ -21,10 +34,130 @@
     }
   }
 
-  &__tables {
+  &__table-container {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+
+    background: white;
+
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+    transition: margin 225ms cubic-bezier(0.4, 0, 0.2, 1),
+                border-radius 0.1s ease-in;
+    overflow: hidden;
+
+
+    &--border-top {
+      border-top-left-radius: 12px !important;
+      border-top-right-radius: 12px !important;
+    }
+
+    &--border-bottom {
+      border-bottom-left-radius: 12px !important;
+      border-bottom-right-radius: 12px !important;
+    }
+
+    &:first-of-type {
+      border-radius: 12px 12px 0 0;
+    }
+
+    &:last-of-type {
+      border-radius: 0 0 12px 12px;
+    }
+
+    &:only-of-type {
+      border-radius: 12px;
+    }
+
+    &--expand {
+      margin: 18px 0;
+      border-radius: 12px !important;
+
+      &:first-of-type {
+        margin-top: 0;
+      }
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  &__table-content {
+    height: 0;
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    overflow: visible;
+    transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &--show {
+      visibility: visible;
+    }
+  }
+
+  &__table {
+    display: block;
+    border-radius: 12px;
+  }
+
+  &__table-header {
+    padding: 8px 8px 8px 24px;
+    border-radius: 12px 12px 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: white;
+    font-family: $font-system;
+  }
+
+  &__panel {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  &__total {
+    display: flex;
+    padding: 4px 12px 12px 24px;
+    flex-direction: column;
+    gap: 4px;
+    font-family: $font-system;
+    font-size: 14px;
+    line-height: 1;
+  }
+
+  &__total-text {
+    font-size: 12px;
+    color: #4b4848;
+    margin-right: 8px;
+    font-weight: 500;
+  }
+
+  &__total-value {
+    color: black;
+    font-weight: bold;
+    display: flex;
+  }
+
+  &__table-title {
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+  &__tables-title {
+    font-family: $font-system;
+    font-weight: bold;
+    margin-bottom: 4px;
+    padding: 0 8px 0 16px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__tables-title-buttons {
+    display: flex;
+    gap: 2px;
   }
 
   &__column {
@@ -79,20 +212,6 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-  }
-
-  &__table-title {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 4px 0;
-    position: sticky;
-    top: 0;
-
-    font-size: 18px;
-    z-index: 101;
-    background-color: #fafafa;
-    border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
   }
 
   &__table-actions {
