--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,30 +1,30 @@
-<app-details [title]="name" sidebarButtonIcon="time-new">
+<app-details [title]="name" sidebarButtonIcon="time">
   <ng-container buttons-left>
     <app-button button-transparent routerLink="/category-details/{{parentId}}">
-      <mat-icon svgIcon="tree-new"></mat-icon>
+      <mat-icon svgIcon="tree"></mat-icon>
     </app-button>
   </ng-container>
 
   <ng-container buttons-right>
     <app-button button-transparent (click)="onCreateRecord()">
-      <mat-icon svgIcon="add-new"></mat-icon>
+      <mat-icon svgIcon="add"></mat-icon>
     </app-button>
 
     <app-button *ngIf="dataSourceTable.length" button-transparent (click)="onPrint()">
-      <mat-icon svgIcon="printer-new"></mat-icon>
+      <mat-icon svgIcon="printer"></mat-icon>
     </app-button>
   </ng-container>
 
   <ng-container content>
     <div class="detail__cards">
-      <app-rich-widget icon="money-new"
+      <app-rich-widget icon="money"
                        type="currency"
                        tooltip="PAGES.CATEGORY_DETAILS.TOOLTIPS.OVERALL_EXPENSE"
                        [title]="'PAGES.DETAIL.OVERALL_EXPENSE'"
                        value="{{costSum}}"
       >
       </app-rich-widget>
-      <app-rich-widget icon="calendar-edit-new"
+      <app-rich-widget icon="calendar-edit"
                        orientation="horizontal"
                        type="date"
                        [title]="'PAGES.DETAIL.LAST_MODIFIED'"
@@ -40,8 +40,5 @@
                          (delete)="onDelete($event)">
       </app-records-table>
     </ubuntu-container>
-    <div *ngIf="!dataSourceTable.length" class="detail__empty">
-      <mat-icon class="detail__empty-text">content_paste</mat-icon>{{"PAGES.DETAIL.EMPTY" | translate}}
-    </div>
   </ng-container>
 </app-details>
