--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
@@ -18,7 +18,7 @@
     </span>
     <div class="categories-tree-node__expand-button-container">
       <mat-icon class="categories-tree-node__expand-button"
-                svgIcon="expand-new"
+                svgIcon="expand"
                 [class.categories-tree-node__expand-button--expanded]="expand"
                 *ngIf="child.children?.length"
                 (click)="expand = !expand; $event.stopPropagation()">
@@ -49,16 +49,16 @@
 <mat-menu #contextMenu="matMenu">
   <ng-template matMenuContent>
       <button class="menu-item" mat-menu-item *ngIf="!child.parent" (click)="onAdd()">
-        <mat-icon class="mat-item__icon mat-item__icon--add" svgIcon="add-new"></mat-icon>
+        <mat-icon class="mat-item__icon mat-item__icon--add" svgIcon="add"></mat-icon>
         <span>{{"MENU.ADD" | translate}}</span>
       </button>
       <button class="menu-item" mat-menu-item (click)="onEdit()">
-        <mat-icon svgIcon="edit-new"></mat-icon>
+        <mat-icon svgIcon="edit"></mat-icon>
         <span>{{"MENU.EDIT" | translate}}</span>
       </button>
       <div class="mat-menu__divider"></div>
       <button class="menu-item menu-item--delete" mat-menu-item (click)="onDelete()">
-        <mat-icon class="mat-item__icon mat-item__icon--delete" svgIcon="trash-new"></mat-icon>
+        <mat-icon class="mat-item__icon mat-item__icon--delete" svgIcon="trash"></mat-icon>
         <span>{{"MENU.DELETE" | translate}}</span>
       </button>
   </ng-template>
