--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
@@ -16,7 +16,7 @@
 
     visibility: hidden;
     overflow: hidden;
-    transition: height 0.2s ease-out;
+    transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &--expanded {
       visibility: visible;
