--- a/src/app/shared/components/dialog/dialog.component.html
+++ b/src/app/shared/components/dialog/dialog.component.html
@@ -1,12 +1,25 @@
 <section class="dialog">
+  <div class="loader" *ngIf="loading$ | async">
+    <div class="lds-ellipsis">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
+  <div class="notification-container" [class.notification-container--show]="showNotification">
+    <div class="notification notification--{{(notification$ | async)?.type}}">
+      <mat-icon svgIcon="{{(notification$ | async)?.type || 'empty'}}"></mat-icon>
+      <div class="notification__text">
+        {{(notification$ | async)?.text | translate}}
+      </div>
+  </div>
+  </div>
   <header class="dialog__header" [class.dialog__header--border]="contentScrolled">
-    <div class="dialog__title">{{title}}</div>
+    <div class="dialog__title">{{title | translate}}</div>
     <div class="dialog__buttons">
-      <app-button *ngIf="canChangeSize" button-transparent (click)="onSwitchSize()">
-        <mat-icon>{{size === 'compact' ? 'open_in_full' : 'close_fullscreen'}}</mat-icon>
-      </app-button>
       <app-button button-transparent (click)="onClose()">
-        <mat-icon svgIcon="close-new"></mat-icon>
+        <mat-icon svgIcon="close"></mat-icon>
       </app-button>
     </div>
   </header>
@@ -21,8 +34,9 @@
     </button>
     <button class="button button__submit"
             mat-button
+            [disabled]="disabledSumbitButton"
             (click)="onSubmit()">
-      {{(mode === FormModeEnum.Create ? "DIALOG.BUTTONS.ADD" : "DIALOG.BUTTONS.EDIT") | translate}}
+      {{(submitText || (mode === FormModeEnum.Create ? "DIALOG.BUTTONS.ADD" : "DIALOG.BUTTONS.EDIT")) | translate}}
     </button>
   </footer>
 </section>
