--- a/src/app/shared/components/dialog/dialog.component.scss
+++ b/src/app/shared/components/dialog/dialog.component.scss
@@ -8,6 +8,7 @@
 }
 
 .dialog {
+  position: relative;
   box-sizing: border-box;
   height: 100%;
   display: flex;
@@ -72,10 +73,122 @@
   background-color: var(--primary-color);
   border-color: transparent;
   color: #fff;
+
+  &.mat-button-disabled {
+    color: white;
+    opacity: 0.6;
+  }
 }
 
 .button__cancel {
   background-color: #f1f1f1;
   border-color: #f1f1f1;
   color: $font-primary;
+}
+
+.loader {
+  position: absolute;
+  z-index: 100;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #eaeaeaad;
+}
+
+.notification-container {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  width: 91%;
+  z-index: 2;
+  opacity: 0;
+  transform: translate(0, -100%);
+  transition: transform 0.5s ease-out,
+              opacity 0.15s ease-in;
+
+  &--show {
+    transform: translate(0, 0%);
+    transition: transform 0.5s ease-out,
+                opacity 0.15s ease-in 0.3s;
+    opacity: 1;
+  }
+}
+
+.notification {
+  padding: 12px 16px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  background: white;
+  border-radius: 12px;
+  font-size: 14px;
+  color: white;
+  // font-weight: bold;
+
+  &--error {
+    background-color: #c7162b;
+  }
+
+  &--success {
+    background-color: $color-primary;
+  }
+}
+
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: $color-primary;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
 }
