--- a/src/app/shared/components/feedback-dialog/feedback-dialog.component.html
+++ b/src/app/shared/components/feedback-dialog/feedback-dialog.component.html
@@ -1,11 +1,37 @@
-<app-dialog class="feedback" [title]="'Feedback'"
-              (submit)="onSubmit()"
-              (close)="dialogRef.close()"
+<app-dialog class="feedback"
+            [title]="data.type === FeedbackTypeEnum.Question ? 'DIALOG.FEEDBACK.QUESTION_TITLE' : 'DIALOG.FEEDBACK.TITLE'"
+            [submitText]="'DIALOG.BUTTONS.SEND'"
+            [notification$]="notification$"
+            [loading$]="loading$"
+            (submit)="onSend()"
+            (close)="dialogRef.close()"
   >
   <form content [formGroup]="feedbackForm">
+    <mat-form-field [floatLabel]="'always'" *ngIf="!data.type">
+      <mat-label>{{"DIALOG.FIELDS.TYPE" | translate}}</mat-label>
+        <mat-select [formControlName]="'type'">
+          <mat-option *ngFor="let option of feedbackTypeOptions" [value]="option.key">
+            {{option.value | translate}}
+          </mat-option>
+        </mat-select>
+        <mat-icon svgIcon="expand" class="mat-select__expand-icon"></mat-icon>
+      </mat-form-field>
+    <mat-form-field [floatLabel]="'always'">
+      <mat-label>Email</mat-label>
+      <input placeholder="email@example.com"
+             formControlName="email"
+             matInput
+             pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}">
+      <mat-error *ngIf="feedbackForm.get('email').hasError('pattern')">
+        {{'DIALOG.VALIDATIONS.EMAIL' | translate}}
+      </mat-error>
+    </mat-form-field>
     <mat-form-field [floatLabel]="'always'">
       <mat-label>Text</mat-label>
-      <textarea class="feedback__note" [formControlName]="'text'" matInput></textarea>
+      <textarea cdkFocusInitial class="feedback__note" [formControlName]="'text'" matInput [required]="true"></textarea>
+      <mat-error *ngIf="feedbackForm.get('text').hasError('required')">
+        {{'DIALOG.VALIDATIONS.TEXT' | translate}}
+      </mat-error>
     </mat-form-field>
   </form>
 </app-dialog>
